src/test/resources/fixtures/security/unserialize-exploits.php
<?php

class UnserializeExploits
{
    public function FileGetContents($x)
    {
        $string = file_get_contents($x);
        unserialize(<error descr="It's possible to exploit the unserialize via: file_get_contents(...)">$string</error>);
    }

    public function RequestVariables()
    {
        $string1 = $_COOKIE['index'];
        $string1 = $_FILES['index'];
        $string1 = $_SESSION['index'];
        unserialize(<error descr="It's possible to exploit the unserialize via: $_COOKIE, $_FILES, $_SESSION">$string1</error>);

        $string2 = $_REQUEST['index'];
        $string2 = $_POST['index'];
        $string2 = $_GET['index'];
        unserialize(<error descr="It's possible to exploit the unserialize via: $_GET, $_POST, $_REQUEST">$string2</error>);
    }

    public function EnvironmentVariables()
    {
        $string = $_ENV['index'];
        $string = $_SERVER['index'];
        unserialize(<error descr="It's possible to exploit the unserialize via: $_ENV, $_SERVER">$string</error>);
    }
}